--- a/Verkafni-2/index.html
+++ b/Verkafni-2/index.html
@@ -45,7 +45,7 @@
 
     <h1>Bítlarnir</h1>
 
-    <!--img src="The_Fabs.JPG" title="John, Paul, George and Ringo"-->
+    <img src="The_Fabs.JPG" title="John, Paul, George and Ringo">
 
         <h4>Bítlarnir</h4>
         <ul><!-- Unordered list -->
@@ -55,9 +55,10 @@
             <li>Ringo Starr</li>
         </ul>
 
-        <p>Bítlarnir voru áhrifamikil popphljómsveit sem var stofnuð 1960. Hljómsveitin er í hópi þeirra vinsælustu sem uppi hafa verið. Meðlimir sveitarinnar koma frá Liverpool í Englandi og á rætur sínar að rekja til hljómsveitarinnar The Quarry Men, sem var stofnuð af John Lennon árið 1956. Árið 1957 gekk Paul McCartney til liðs við hana, og árið 1958 George Harrison seinna ganga Stuart Sutcliffe og Pete Best til liðs við hana. Hljómsveitin gekk undir ýmsum nöfnum næstu árin, t.d. Johnny and the Moondogs, The Silver Beetles og vorið 1960 voru hljómsveitarmeðlimir farnir að kalla sig Bítlana (The Beatles).
-        
-        </p><p>Allt frá því að fyrsta platan kom út árið 1963 og þar til sú síðasta kom út árið 1970 samanstóð hljómsveitin af fjórum meðlimum, John Lennon, sem spilaði á gítar og söng, Paul McCartney, sem spilaði á bassa og söng, George Harrison, sem spilaði á gítar og söng stöku sinnum, og svo trommaranum Ringo Starr (Richard Starkey), sem einnig söng örfá lög. Langflest lögin voru samin af frægasta lagahöfunda tvíeyki sögunnar Lennon/McCartney. 
+        <div>
+            Bítlarnir voru áhrifamikil popphljómsveit sem var stofnuð 1960. Hljómsveitin er í hópi þeirra vinsælustu sem uppi hafa verið. Meðlimir sveitarinnar koma frá Liverpool í Englandi og á rætur sínar að rekja til hljómsveitarinnar The Quarry Men, sem var stofnuð af John Lennon árið 1956. Árið 1957 gekk Paul McCartney til liðs við hana, og árið 1958 George Harrison seinna ganga Stuart Sutcliffe og Pete Best til liðs við hana. Hljómsveitin gekk undir ýmsum nöfnum næstu árin, t.d. Johnny and the Moondogs, The Silver Beetles og vorið 1960 voru hljómsveitarmeðlimir farnir að kalla sig Bítlana (The Beatles).
+        </div>
+        </p>Allt frá því að fyrsta platan kom út árið 1963 og þar til sú síðasta kom út árið 1970 samanstóð hljómsveitin af fjórum meðlimum, John Lennon, sem spilaði á gítar og söng, Paul McCartney, sem spilaði á bassa og söng, George Harrison, sem spilaði á gítar og söng stöku sinnum, og svo trommaranum Ringo Starr (Richard Starkey), sem einnig söng örfá lög. Langflest lögin voru samin af frægasta lagahöfunda tvíeyki sögunnar Lennon/McCartney. 
         </p>
         <h2>"A Day In The Life"</h2>
         <blockquote>
